# robotic_simulation

./: .gitignore  README.md  setup_humble.bash
Isaac/: .gitignore  README.md  __init__.py  build_adapter.sh  run_agent.sh  run_mapping.sh  run_stage4.sh  run_training_nodes.sh  save_map.sh
Isaac/apps/: run_stage4.py
Isaac/config/: __init__.py  runtime.py
Isaac/robot/: __init__.py  turtlebot3_waffle_pi.py
Isaac/ros2_ws/src/isaac_stage4_slam/: package.xml  setup.cfg  setup.py
Isaac/ros2_ws/src/isaac_stage4_slam/config/: waffle_pi_2d.lua
Isaac/ros2_ws/src/isaac_stage4_slam/isaac_stage4_slam/: __init__.py  wall_avoidance.py
Isaac/ros2_ws/src/isaac_stage4_slam/launch/: isaac_mapping.launch.py
Isaac/ros2_ws/src/isaac_stage4_slam/rviz/: isaac_mapping.rviz
Isaac/ros2_ws/src/turtlebot3_isaac_adapter/: package.xml  setup.cfg  setup.py
Isaac/ros2_ws/src/turtlebot3_isaac_adapter/launch/: training_nodes.launch.py
Isaac/ros2_ws/src/turtlebot3_isaac_adapter/turtlebot3_isaac_adapter/: __init__.py  gazebo_api_adapter.py
Isaac/ros_bridge/: __init__.py  local_control.py  omnigraph_bridge.py
Isaac/tests/: test_stage4_spec.py
Isaac/world/: __init__.py  stage4_spec.py  stage4_world.py
src/turtlebot3_drl/: package.xml
src/turtlebot3_drl/turtlebot3_drl/common/: graph.py  storagemanager.py
src/turtlebot3_drl/turtlebot3_drl/drl_environment/: drl_environment.py
src/turtlebot3_drl/turtlebot3_drl/drl_gazebo/: drl_gazebo.py
src/turtlebot3_simulations/turtlebot3_fake_node/src/: turtlebot3_fake_node.cpp
