<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_isaac_adapter</name>
  <version>0.1.0</version>
  <description>Gazebo API compatibility facade for TurtleBot3 DRL on Isaac Sim.</description>
  <maintainer email="rr@localhost.com">rr</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
